--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 /*base*/
-html, body, div, span, a {
+html, body, div, span, a, img {
     margin: 0;
     padding: 0;
     border: none;
@@ -19,7 +19,7 @@ html, body {
 }
 
 body {
-    font-family: tahoma,"microsoft yahei",arial, sans-serif;
+    font-family: "microsoft yahei",arial, sans-serif;
 }
 
 a {
@@ -34,8 +34,11 @@ a {
 	height: 100%;
 	max-width: 600px;
 	margin: 0 auto;
-	background: #0074EB url(../img/bg_index.jpg) no-repeat 0%;
-	background-size: 100% 100%;
+}
+
+.ui-bg-img {
+	width: 100%;
+	vertical-align: bottom;
 }
 
 .ui-intro {
@@ -55,8 +58,6 @@ a {
 }
 
 .ui-btn-layout {
-	position: absolute;
-	bottom: 5%;
 	text-align: center;
 	width: 100%;
 }
@@ -65,14 +66,31 @@ a {
 	display: inline-block;
 	color: #fff;
 	width: 86%;
-	height: 45px;
-	line-height: 45px;
+	height: 42px;
+	line-height: 42px;
 	border-radius: 4px;
 	background-color: #18d3a8;
-	/*-webkit-box-shadow: 0px 2px 1px #12a988;
-	box-shadow: 0px 2px 1px #12a988;*/
 }
 
+.ui-mask {
+	position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 999;
+}
+
+.ui-loading {
+	width: 100%;
+	height: 100%;
+	background: url(../img/loading.gif) no-repeat 50%;
+	background-size: 1em;
+}
+
+/*动画*/
 @keyframes fadeInOut1 {
 	0% {
         opacity:0;
@@ -110,7 +128,7 @@ a {
     25% {
         opacity:0;
     }
-    60% {
+    62% {
         opacity:1;    
     }
 }
@@ -152,13 +170,14 @@ a {
     25% {
         opacity:0;
     }
-    60% {
+    62% {
         opacity:1;    
     }
 }
 
 .animate-fade {
 	position: absolute;
+	top: 0;
 	width: 80%;
 	height: 50%;
 	margin: 10%;
@@ -169,7 +188,7 @@ a {
     animation-iteration-count: 1;
 }
 
-.animate-fade-one {
+.animate-fade0 {
 	opacity:0;
 	-webkit-animation-name: fadeInOut1;
     -webkit-animation-duration: 3s;
@@ -179,7 +198,7 @@ a {
     background-size: 80%;
 }
 
-.animate-fade-two {
+.animate-fade1 {
 	opacity:0;
 	-webkit-animation-name: fadeInOut2;
     -webkit-animation-duration: 8s;
@@ -189,7 +208,7 @@ a {
     background-size: 80%;
 }
 
-.animate-fade-three {
+.animate-fade2 {
 	-webkit-animation-name: fadeInOut3;
     -webkit-animation-duration: 16s;
     animation-name: fadeInOut3;
