--- a/css/choices.css
+++ b/css/choices.css
@@ -51,8 +51,8 @@ a {
 	-webkit-box-pack: center;
 	box-align: center;
 	box-pack: center;
-	height: 45%;
-	background: url(../img/bg_choise.jpg) no-repeat 50% 0%;
+	height: 46%;
+	background: #1187eb url(../img/bg_choise.jpg) no-repeat 50% 0%;
 	background-size: 100% 100%;
 }
 
@@ -133,8 +133,8 @@ a {
 
 .ui-choose-list li {
 	font-size: 95%;
-	margin: 2% 20px;
-    padding: 3% 20px 3% 0px;
+    margin: 2% 8%;
+    padding: 2% 20px 3% 0px;
 }
 
 .ui-status-seclected {
@@ -157,13 +157,8 @@ a {
 	line-height: 45px;
 	border-radius: 4px;
 	background-color: #00d4a6;
-	/*-webkit-box-shadow: 0px 2px 1px #12a988;
-	box-shadow: 0px 2px 1px #12a988;*/
-}
-
-.ui-btn-disabled {
-	/*color: #E6E6E6;
-	background-color: #12a988;*/
+	-webkit-box-shadow: 1px 1px 8px #10ECBD;
+	box-shadow: 1px 1px 8px #10ECBD;
 }
 
 .fn-hide {
@@ -172,6 +167,11 @@ a {
 
 .fn-clear {
 	clear: both;
+}
+
+.ui-mywork {
+	margin: 6% 0 0 8%;
+    font-weight: bolder;
 }
 
 /*q1*/
@@ -245,7 +245,7 @@ a {
 }
 
 .ui-selected-image[data-item="q3_3"] {
-	background: url(../img/items/q3_3.png) no-repeat 50% 100%;
+	background: url(../img/items/q3_3.png) no-repeat 0% 100%;
 	background-size: 110%;
 }
 
@@ -272,7 +272,7 @@ a {
 
 /*q5*/
 .ui-selected-image[data-item="q5_0"] {
-	background: url(../img/items/q5_0.png) no-repeat 50% 100%;
+	background: url(../img/items/q5_0.png) no-repeat 0% 100%;
 	background-size: 110%;
 }
 
@@ -324,7 +324,9 @@ a {
 }
 
 .ui-footer {
-	position: relative;
+	position: absolute;
+    width: 100%;
+    bottom: 0px;
 }
 
 .ui-footer-hr {
@@ -335,17 +337,35 @@ a {
     width: 90%;
     height: 1px;
     margin: 0 auto;
-    background-color: rgba(220, 218, 218, 0.1);
+    background-color: rgba(220, 218, 218, 0.3);
     z-index: -1;
 }
 
 .ui-footer-copyright {
-    color: rgba(220, 218, 218, 0.2);
+    color: rgba(220, 218, 218, 1);
     width: 40%;
-    margin: 20px auto;
+    margin: 10px auto;
     font-size: 70%;
     text-align: center;
     background-color: #fff;
+}
+
+.ui-mask {
+	position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 999;
+}
+
+.ui-loading {
+	width: 100%;
+	height: 100%;
+	background: url(../img/loading.gif) no-repeat 50%;
+	background-size: 1.2em;
 }
 
 @media (min-width: 600px) {
@@ -358,20 +378,83 @@ a {
 	.ui-question-content {
 		top: 83%;
 	}
+	.ui-answer-question {
+		font-size: 90%;
+	}
 }
 
 @media (max-width: 320px) {
 	.ui-choose-list {
 		margin: 10px 0px;
 	}
+	.ui-choose-list li {
+    	margin: 1% 8%;
+    }
 	.ui-question-content {
-		top: 83%;
-    	font-size: 90%;
+		top: 85%;
+    	font-size: 82%;
 	}
 	.ui-footer-copyright {
     	margin: 10px auto;
     }
     .ui-answer-question {
-		font-size: 90%;
+		font-size: 76%;
 	}
+}
+
+@keyframes fadeIn {
+	0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;    
+    }
+}
+
+
+@-webkit-keyframes fadeIn {
+	0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;    
+    }
+}
+
+.fadeIn {
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+
+@keyframes fadeOut {
+	0% {
+        opacity:1;
+    }
+    100% {
+        opacity:0;    
+    }
+}
+
+
+@-webkit-keyframes fadeOut {
+	0% {
+        opacity:1;
+    }
+    100% {
+        opacity:0;    
+    }
+}
+
+.fadeOut {
+	-webkit-animation-name: fadeOut;
+	animation-name: fadeOut;
+}
+
+.animated {
+	-webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
