--- a/css/result.css
+++ b/css/result.css
@@ -1,5 +1,5 @@
 /*base*/
-html, body, div, span, a, ul, li, p, img {
+html, body, div, span, a, ul, li, p, img, header,footer,section {
     margin: 0;
     padding: 0;
     border: none;
@@ -20,6 +20,10 @@ html, body {
 
 body {
     font-family: "microsoft yahei",arial, sans-serif;
+}
+
+header, footer, section {
+	display: block;	
 }
 
 a {
@@ -45,6 +49,7 @@ a {
 	width: 100%;
 	height: 100%;
 	max-width: 600px;
+	background-color: #306FE0;
 }
 
 .ui-loading {
@@ -60,25 +65,26 @@ a {
 }
 
 .ui-result-titleframe {
-	color: #fff;
-	text-align: center;
-	font-size: 150%;
-    line-height: 4.8em;
+	position: relative;
 	width: 100%;
     height: 17%;
     background: url(../img/resultTitle.png) no-repeat 0%;
-    background-size: 100%;
+    background-size: 100% auto;
 }
 
-.ui-result-title {
-	color: #fff;
+.ui-title {
+	position: absolute;
+	top: 43%;
+	color: #FFF;
 	text-align: center;
-    height: 17%;
+	width: 100%;
+	font-size: 160%;
 }
 
 .ui-result-detail {
 	color: #fff;
-	margin: 10px 0px;
+	height: 62%;
+	margin: 2% 0;
 }
 
 .ui-detail-card {
@@ -87,12 +93,13 @@ a {
 	height: 100%;
 	margin: 0 auto;
 	border: 3px solid #fff;
+	background-color: #1DA0EE;
 }
 
 .ui-card-title {
 	height: 36px;
     line-height: 36px;
-	padding-left: 10px;
+	padding: 2% 10px;
 }
 
 .ui-card-star {
@@ -100,26 +107,27 @@ a {
 	font-size: 12px;
  	height: 30px;
     line-height: 30px;
+    padding: 1% 10px;
 }
 
 .ui-star-list {
 	position: absolute;
 	top: 0px;
 	right: 0px;
-	padding: 3px;
+	padding: 2% 10px;
 }
 
 .ui-star-light {
 	background: url(../img/star_light.png) no-repeat 50% !important;
-	background-size: 1.1em !important;
+	background-size: 1em !important;
 }
 
 .ui-star-list li {
 	display: inline-block;
-	width: 12px;
-	height: 12px;
+	width: 11px;
+	height: 11px;
 	background: url(../img/star_gray.png) no-repeat 50%;
-	background-size: 1.1em;
+	background-size: 1em;
 }
 
 .ui-card-photolayout {
@@ -139,7 +147,7 @@ a {
 }
 
 .ui-detail-card[data-company="google"] > .ui-card-title {
-	background: url(../img/logo/google.png) no-repeat 92% 50%;
+	background: url(../img/logo/google.png) no-repeat 95% 50%;
     background-size: 1.3em;
 }
 
@@ -394,23 +402,27 @@ a {
 }
 
 .ui-card-suggest {
-	/*position: absolute;
-    bottom: 0;*/
+	position: absolute;
+    bottom: 0;
     width: 100%;
 	font-size: 12px;
 	line-height: 20px;
-	/*padding: 5px;*/
+	padding: 1% 0px;
 }
 
-.ui-card-suggest span {
-	padding: 5px;
-	color: #91AFD2;
+.ui-space-slogenTitle {
+	padding: 1% 10px 0px 10px;
 }
 
+.ui-space-slogen {
+	padding: 1% 10px;
+	color: rgba(255,255,255,0.8);
+}
 
 .ui-btn-layout {
 	text-align: center;
 	width: 100%;
+	margin-top: 5%;
 }
 
 .ui-btn {
@@ -421,27 +433,29 @@ a {
 	line-height: 42px;
 	border-radius: 4px;
 	background-color: #fff;
-	-webkit-box-shadow: 0px 2px 1px #C9D0CE;
-	box-shadow: 0px 2px 1px #C9D0CE;
+	-webkit-box-shadow: 1px 1px 2px #353535;
+	box-shadow: 1px 1px 2px #353535;
 }
 
 .ui-arrow-layout {
+	position: absolute;
+	bottom: 0;
 	width: 100%;
-	height: 45px;
 	text-align: center;
 }
 
 .ui-arrow {
 	display: inline-block;
-	width: 20px;
-	height: 40px;
+	width: 15%;
+    height: 20px;
     background: url(../img/arrow.gif) no-repeat 50%;
-    background-size: 60%;
+    background-size: auto 100%;
     -webkit-transform: rotateX(180deg);
     transform: rotateX(180deg);
 }
 
 .ui-share {
+	text-align: center;
 	background: url(../img/bg_code.jpg) no-repeat 0%;
 	background-size: 100% 100%;
 }
@@ -464,7 +478,7 @@ a {
 }
 
 .ui-share-code {
-	width: 100%;
+	width: 90%;
 	margin-top: -1px;
 }
 
@@ -475,15 +489,17 @@ a {
     left: 0;
     bottom: 0;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.62);
+    background-color: rgba(0, 0, 0, 0.8);
     z-index: 999;
 }
 
 .ui-mask-content {
-	width: 100%;
+	position: absolute;
+	right: 3%;
+	width: 70%;
 	height: 100%;
-	background: url(../img/sharefriend.png) no-repeat 80% 0%;
-	background-size: 77%;
+	background: url(../img/sharefriend.png) no-repeat 100% 0%;
+	background-size: 100%;
 }
 
 .ui-btn-share {
@@ -534,6 +550,33 @@ a {
     animation-duration: .8s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+}
+
+@media (max-width: 320px) {
+	.ui-result-titleframe {
+		background-position-x: 50%;
+	    background-size: 96% auto;
+    }
+    .ui-star-list li {
+    	width: 9px;
+	    height: 9px;
+	    background-size: 0.8em;
+    }
+    .ui-star-light {
+    	background-size: 0.8em !important;
+    }
+	.ui-detail-card {
+    	width: 68%;
+    }
+    .ui-card-photo {
+	    width: 88%;
+	}
+	.ui-btn {
+	    width: 82%;
+    }
+    .ui-result-detail {
+	    height: 63%;
+	}
 }
 
 @-webkit-keyframes an-next-result {
@@ -633,39 +676,51 @@ a {
     }
 }
 
-.ui-animate-round {
-	-webkit-animation-name: an-round;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-timing-function: ease;
-    -webkit-animation-iteration-count: 1;
+/*卡片动画*/
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
-@-webkit-keyframes an-round {
-    from {
-       -webkit-transform: rotateY(0deg);
-    }
- 	to {
-	    -webkit-transform: rotateY(360deg);
-  	}
+@-webkit-keyframes zoomInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
+    transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+    transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+  }
 }
 
-@keyframes an-round {
-    from {
-       -webkit-transform: rotateY(0deg);
-    }
- 	to {
-	    -webkit-transform: rotateY(360deg);
-  	}
+@keyframes zoomInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
+    transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+    transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+  }
 }
 
-@media (max-width: 375px) {
-	.ui-btn-layout {
-	    margin-top: 20px;
-	}
-}
-
-@media (max-width: 320px) {
-	.ui-btn-layout {
-	    margin-top: 0px;
-	}
+.zoomInDown {
+  -webkit-animation-name: zoomInDown;
+  animation-name: zoomInDown;
 }
